--- a/index.html
+++ b/index.html
@@ -3,97 +3,58 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>PMG™EDU | All Courses</title>
+<title>PMG™ EDU | All Courses</title>
 <style>
 body{
-  margin:0;
-  font-family:Arial,sans-serif;
-  background:#0f0f0f;
-  color:#f0f0f0;
-  text-align:center;
-  padding:20px;
-  position:relative;
+  margin:0;font-family:Arial,sans-serif;background:#0f0f0f;color:#f0f0f0;text-align:center;padding:20px;position:relative;
 }
-h1{color:#FFD700;font-size:2.5em; margin-bottom:10px;}
+h1{color:#FFD700;font-size:2.5em;}
 .quote{
   font-size:1.5em;
   margin:15px auto 30px;
-  color:#888;
+  color:#999;
   max-width:800px;
   font-style:italic;
   font-weight:bold;
+  text-shadow:1px 1px 2px #000;
 }
 .courses{
-  display:grid;
-  grid-template-columns:repeat(auto-fit,minmax(120px,1fr));
-  gap:15px;
-  max-width:800px;
-  margin:auto;
+  display:grid;grid-template-columns:repeat(auto-fit,minmax(120px,1fr));gap:15px;max-width:800px;margin:auto;
 }
-.course{
-  background:#1b1b1b;
-  padding:20px;
-  border-radius:12px;
-  cursor:pointer;
-}
+.course{background:#1b1b1b;padding:20px;border-radius:12px;cursor:pointer;}
 .course h3{color:#FFD700;}
 .section{
-  margin-top:30px;
-  background:#1b1b1b;
-  padding:20px;
-  border-radius:12px;
-  max-width:800px;
-  margin:auto;
+  margin-top:30px;background:#1b1b1b;padding:20px;border-radius:12px;max-width:800px;margin:auto;
 }
 .paper-btn{
-  width:100%;
-  padding:12px;
-  margin:6px 0;
-  border:none;
-  border-radius:10px;
-  font-weight:bold;
-  cursor:pointer;
-  background:linear-gradient(135deg,#FFD700,#cfa100);
-  color:#111;
+  width:100%;padding:12px;margin:6px 0;border:none;border-radius:10px;font-weight:bold;cursor:pointer;
+  background:linear-gradient(135deg,#FFD700,#cfa100);color:#111;
 }
 .locked{background:#555;color:#ccc;}
-#dictionary input{
-  padding:8px;border-radius:8px;border:none;width:60%;
-}
-#dictionary button{
-  padding:8px 12px;border-radius:8px;border:none;
-  font-weight:bold;background:#FFD700;color:#111;cursor:pointer;
-}
-#ai-chat textarea{
-  width:80%;height:80px;border-radius:10px;border:none;padding:10px;
-}
-#ai-chat button{
-  padding:10px 15px;border-radius:10px;border:none;
-  background:#FFD700;color:#111;font-weight:bold;cursor:pointer;
-}
-#ai-response{
-  text-align:left;margin-top:15px;background:#111;
-  padding:15px;border-radius:10px;min-height:80px;
-}
+#dictionary input{padding:8px;border-radius:8px;border:none;width:60%;}
+#dictionary button{padding:8px 12px;border-radius:8px;border:none;font-weight:bold;background:#FFD700;color:#111;cursor:pointer;}
+#ai-chat textarea{width:80%;height:80px;border-radius:10px;border:none;padding:10px;}
+#ai-chat button{padding:10px 15px;border-radius:10px;border:none;background:#FFD700;color:#111;font-weight:bold;cursor:pointer;}
+#ai-response{text-align:left;margin-top:15px;background:#111;padding:15px;border-radius:10px;min-height:80px;}
 iframe{border:none;background:#111;}
+/* Watermark */
 .watermark{
-  position:fixed;
-  bottom:10px;
-  right:-60px;
-  font-size:50px;
-  color:rgba(255,215,0,0.05);
-  transform:rotate(-45deg);
-  pointer-events:none;
-  z-index:0;
+  position:fixed;top:50%;left:50%;transform:translate(-50%,-50%) rotate(-45deg);
+  font-size:6em;color:rgba(200,200,200,0.05);pointer-events:none;user-select:none;z-index:0;
+  font-weight:bold;
 }
+.dashboard{display:none;margin-top:30px;}
+.dashboard table{width:100%;border-collapse:collapse;color:#f0f0f0;}
+.dashboard th, .dashboard td{border:1px solid #555;padding:8px;}
+.dashboard th{background:#333;}
 </style>
 </head>
 <body>
 
 <div class="watermark">PMG™ EDU</div>
 
-<h1>PMG™EDU</h1>
-<div class="quote">WORK HARDER, NOBODY CARES</div>
+<h1>PMG™ EDU</h1>
+<div class="quote">“WORK HARDER, NOBODY CARES”</div>
 
 <p>All Courses • Monthly Subscription: <b>K25</b></p>
 
@@ -112,14 +73,15 @@ iframe{border:none;background:#111;}
   <iframe id="pdfFrame" width="100%" height="600px"></iframe>
 </div>
 
-<div class="section">
-  <h2>I Paid? Submit Here</h2>
-  <input type="text" id="payName" placeholder="Your Full Name" /><br><br>
-  <input type="text" id="payPhone" placeholder="Your Phone Number" /><br><br>
-  <button onclick="submitPayment()">Submit Payment</button>
-  <p>After submission, send screenshot to WhatsApp: 
-     <a href="https://wa.me/260775302886" target="_blank" style="color:#FFD700;">📲 0775302886</a>
-  </p>
+<div class="pay-box section">
+  <h2>Pay K25 Monthly</h2>
+  <p>Send payment screenshot via WhatsApp:</p>
+  <p>📱 <b>0775302886</b></p>
+  <a href="https://wa.me/260775302886" target="_blank">📲 WhatsApp Admin</a>
+  <p>After payment, submit "I Paid" below:</p>
+  <input type="text" id="userName" placeholder="Your Name" />
+  <input type="text" id="userPhone" placeholder="Phone Number" />
+  <button onclick="submitPayment()">I Paid</button>
 </div>
 
 <div class="section" id="dictionary">
@@ -136,12 +98,17 @@ iframe{border:none;background:#111;}
   <div id="ai-response"></div>
 </div>
 
-<!-- Admin Dashboard -->
-<div class="section" id="admin-dashboard">
+<div class="dashboard section" id="adminDash">
   <h2>Admin Dashboard</h2>
-  <input type="password" id="adminPass" placeholder="Enter Password" />
-  <button onclick="loginAdmin()">Login</button>
-  <div id="dashboardContent" style="display:none;margin-top:20px;"></div>
+  <p>Password required:</p>
+  <input type="password" id="adminPass" placeholder="Enter password" />
+  <button onclick="unlockDashboard()">Unlock Dashboard</button>
+  <div id="dashContent" style="display:none;">
+    <h3>Pending Payments</h3>
+    <table id="pendingTable"><tr><th>Name</th><th>Phone</th><th>Time</th><th>Action</th></tr></table>
+    <h3>Approved Users</h3>
+    <table id="approvedTable"><tr><th>Name</th><th>Phone</th><th>Access Expiry</th></tr></table>
+  </div>
 </div>
 
 <script>
@@ -163,40 +130,17 @@ function loadCourse(course){
 }
 
 function openPaper(course,year){
-  fetch('get_users.php')
-  .then(res=>res.json())
-  .then(data=>{
-    const approved=data.approved;
-    let phone=prompt("Enter your phone to access PDFs:");
-    let user=approved.find(u=>u.phone===phone);
-    if(user && new Date(user.accessExpiry) > new Date()){
-      document.getElementById("viewer-title").innerText=`${course} – ${year} Past Paper`;
-      document.getElementById("pdfFrame").src=`past-papers/${course}/${course}-${year}.pdf#toolbar=0&navpanes=0&scrollbar=0`;
-      document.getElementById("viewer").style.display="block";
-      document.getElementById("viewer").scrollIntoView({behavior:"smooth"});
-    } else {
-      alert("🔒 Access denied. Ensure you have paid and are approved.");
-    }
-  });
+  document.getElementById("viewer-title").innerText=`${course} – ${year} Past Paper`;
+  document.getElementById("pdfFrame").src=`past-papers/${course}/${course}-${year}.pdf#toolbar=0&navpanes=0&scrollbar=0`;
+  document.getElementById("viewer").style.display="block";
+  document.getElementById("viewer").scrollIntoView({behavior:"smooth"});
 }
 
-function locked(){alert("🔒 Locked. Pay K25 and WhatsApp admin to activate.");}
-
-function submitPayment(){
-  const name=document.getElementById("payName").value.trim();
-  const phone=document.getElementById("payPhone").value.trim();
-  if(!name || !phone){alert("Enter both name and phone."); return;}
-  fetch('update_users.php',{
-    method:'POST',
-    headers:{'Content-Type':'application/json'},
-    body: JSON.stringify({action:'add', user:{name, phone, time:new Date().toISOString()}})
-  })
-  .then(res=>res.json())
-  .then(data=>{alert("Payment request submitted! Send screenshot to WhatsApp: 0775302886.");})
-  .catch(err=>alert("Error submitting payment."));
+function locked(){
+  alert("🔒 Locked. Pay K25 and WhatsApp admin to activate.");
 }
 
-/* Dictionary & AI */
+/* DICTIONARY */
 const dictionary={
   "vector":"A quantity with both magnitude and direction.",
   "scalar":"A quantity with magnitude only.",
@@ -243,7 +187,7 @@ function askAI(){
     if(q.includes(term)){
       response=`💡 ${term.toUpperCase()}\n${dictionary[term]}\n\n📘 Study Tip: Practice this concept using past papers daily.`;
       if(q.includes("example")){
-        response+=`\n\n📌 Example: Apply ${term} step by step in a real problem.`;
+        response+=`\n📌 Example: Apply ${term} step by step in a real problem.`;
       }
       break;
     }
@@ -251,47 +195,63 @@ function askAI(){
   document.getElementById("ai-response").innerText=response;
 }
 
-/* Admin Dashboard */
-function loginAdmin(){
-  const pass=document.getElementById("adminPass").value;
-  if(pass==="Pmg76243406.,SILENCE"){
-    document.getElementById("dashboardContent").style.display="block";
-    loadDashboard();
-  } else {
-    alert("❌ Wrong password!");
-  }
+/* PAYMENT SUBMISSION */
+function submitPayment(){
+  const name=document.getElementById("userName").value.trim();
+  const phone=document.getElementById("userPhone").value.trim();
+  if(!name || !phone){alert("Enter name and phone"); return;}
+  fetch('update_users.php',{
+    method:'POST',
+    headers:{'Content-Type':'application/json'},
+    body:JSON.stringify({action:'add',user:{name:name,phone:phone,time:new Date().toISOString()}})
+  }).then(res=>res.json()).then(data=>{
+    alert(data.message);
+  });
 }
 
-function loadDashboard(){
+/* ADMIN DASHBOARD */
+function unlockDashboard(){
+  const pass=document.getElementById("adminPass").value;
+  if(pass!=='Pmg76243406.,SILENCE'){alert("Wrong password"); return;}
+  document.getElementById("dashContent").style.display='block';
+  document.getElementById("adminPass").style.display='none';
+  fetchDashboard();
+}
+
+function fetchDashboard(){
   fetch('get_users.php')
   .then(res=>res.json())
   .then(data=>{
-    let html="<h3>Pending Users</h3>";
-    if(data.pending.length===0) html+="<p>No pending users.</p>";
+    const pendingTable=document.getElementById("pendingTable");
+    pendingTable.innerHTML='<tr><th>Name</th><th>Phone</th><th>Time</th><th>Action</th></tr>';
     data.pending.forEach(u=>{
-      html+=`<div>${u.name} - ${u.phone} <button onclick="approveUser('${u.phone}')">Approve</button></div>`;
+      const row=document.createElement('tr');
+      row.innerHTML=`<td>${u.name}</td><td>${u.phone}</td><td>${u.time}</td>
+      <td><button onclick="approveUser('${u.phone}')">Approve</button></td>`;
+      pendingTable.appendChild(row);
     });
-    html+="<h3>Approved Users</h3>";
-    if(data.approved.length===0) html+="<p>No approved users.</p>";
+    const approvedTable=document.getElementById("approvedTable");
+    approvedTable.innerHTML='<tr><th>Name</th><th>Phone</th><th>Access Expiry</th></tr>';
     data.approved.forEach(u=>{
-      html+=`<div>${u.name} - ${u.phone} - Expires: ${new Date(u.accessExpiry).toLocaleDateString()}</div>`;
+      const row=document.createElement('tr');
+      row.innerHTML=`<td>${u.name}</td><td>${u.phone}</td><td>${u.accessExpiry}</td>`;
+      approvedTable.appendChild(row);
     });
-    document.getElementById("dashboardContent").innerHTML=html;
   });
 }
 
 function approveUser(phone){
-  if(confirm("Approve this user?")){
-    fetch('update_users.php',{
-      method:'POST',
-      headers:{'Content-Type':'application/json'},
-      body: JSON.stringify({action:'approve', phone})
-    }).then(res=>res.json()).then(data=>{
-      alert("User approved!");
-      loadDashboard();
-    });
-  }
+  if(!confirm("Approve this user?")) return;
+  fetch('update_users.php',{
+    method:'POST',
+    headers:{'Content-Type':'application/json'},
+    body:JSON.stringify({action:'approve',phone:phone})
+  }).then(res=>res.json()).then(data=>{
+    alert(data.message);
+    fetchDashboard();
+  });
 }
 </script>
+
 </body>
-    </html>
+  </html>
