--- a/index.html
+++ b/index.html
@@ -5,28 +5,9 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>PMG™ EDU | All Courses</title>
 <style>
+/* ... keep all your existing CSS ... */
 body{margin:0;font-family:Arial,sans-serif;background:#0f0f0f;color:#f0f0f0;text-align:center;padding:20px;position:relative;}
-h1{color:#FFD700;font-size:2.5em;}
-.quote{font-size:1.5em;margin:15px auto 30px;color:#999;max-width:800px;font-style:italic;font-weight:bold;text-shadow:1px 1px 2px #000;}
-.courses{display:grid;grid-template-columns:repeat(auto-fit,minmax(120px,1fr));gap:15px;max-width:800px;margin:auto;}
-.course{background:#1b1b1b;padding:20px;border-radius:12px;cursor:pointer;}
-.course h3{color:#FFD700;}
-.section{margin-top:30px;background:#1b1b1b;padding:20px;border-radius:12px;max-width:800px;margin:auto;}
-.paper-btn{width:100%;padding:12px;margin:6px 0;border:none;border-radius:10px;font-weight:bold;cursor:pointer;background:linear-gradient(135deg,#FFD700,#cfa100);color:#111;}
-.locked{background:#555;color:#ccc;}
-#dictionary input{padding:8px;border-radius:8px;border:none;width:60%;}
-#dictionary button{padding:8px 12px;border-radius:8px;border:none;font-weight:bold;background:#FFD700;color:#111;cursor:pointer;}
-#ai-chat textarea{width:80%;height:80px;border-radius:10px;border:none;padding:10px;}
-#ai-chat button{padding:10px 15px;border-radius:10px;border:none;background:#FFD700;color:#111;font-weight:bold;cursor:pointer;}
-#ai-response{text-align:left;margin-top:15px;background:#111;padding:15px;border-radius:10px;min-height:80px;}
-iframe{border:none;background:#111;}
-.watermark{position:fixed;top:50%;left:50%;transform:translate(-50%,-50%) rotate(-45deg);font-size:6em;color:rgba(200,200,200,0.05);pointer-events:none;user-select:none;z-index:0;font-weight:bold;}
-.admin-login{margin:20px auto; max-width:400px; text-align:center; background:#1b1b1b; padding:15px; border-radius:12px;}
-.admin-login input{padding:8px;border-radius:8px;border:none;width:80%;}
-.admin-login button{padding:8px 12px;border-radius:8px;border:none;font-weight:bold;background:#FFD700;color:#111;cursor:pointer;margin-left:5px;}
-.dashboard table{width:100%;border-collapse:collapse;color:#f0f0f0;margin-top:10px;}
-.dashboard th, .dashboard td{border:1px solid #555;padding:8px;}
-.dashboard th{background:#333;}
+/* keep all other styles as they are */
 </style>
 </head>
 <body>
@@ -93,146 +74,16 @@ iframe{border:none;background:#111;}
 </div>
 
 <script>
+// --- KEEP ALL YOUR EXISTING SCRIPT CODE HERE ---
 document.addEventListener("contextmenu", e => e.preventDefault());
-
-const years=[2018,2019,2020,2021,2022,2023,2024];
-const demoYears=[2018,2019,2020,2021,2022];
-
-function loadCourse(course){
-  let html=`<h2>${course} Past Papers</h2>`;
-  years.forEach(y=>{
-    if(demoYears.includes(y)){
-      html+=`<button class="paper-btn" onclick="openPaper('${course}',${y})">${course} – ${y} (DEMO)</button>`;
-    }else{
-      html+=`<button class="paper-btn locked" onclick="locked()">${course} – ${y} 🔒</button>`;
-    }
-  });
-  document.getElementById("papers").innerHTML=html;
-}
-
-function openPaper(course,year){
-  document.getElementById("viewer-title").innerText=`${course} – ${year} Past Paper`;
-  document.getElementById("pdfFrame").src=`past-papers/${course}/${course}-${year}.pdf#toolbar=0&navpanes=0&scrollbar=0`;
-  document.getElementById("viewer").style.display="block";
-  document.getElementById("viewer").scrollIntoView({behavior:"smooth"});
-}
-
-function locked(){
-  alert("🔒 Locked. Pay K25 and WhatsApp admin to activate.");
-}
-
-/* Dictionary + AI */
-const dictionary={
-  "vector":"A quantity with both magnitude and direction.",
-  "scalar":"A quantity with magnitude only.",
-  "function":"A rule that assigns each input exactly one output.",
-  "limit":"The value a function approaches as input nears a point.",
-  "derivative":"Rate of change of a function.",
-  "integration":"Process of finding area under a curve.",
-  "matrix":"Rectangular array of numbers.",
-  "determinant":"Single value from a square matrix.",
-  "force":"A push or pull acting on an object.",
-  "velocity":"Speed in a given direction.",
-  "acceleration":"Rate of change of velocity.",
-  "work":"Force applied over a distance.",
-  "power":"Rate of doing work.",
-  "energy":"Capacity to do work.",
-  "atom":"Smallest unit of an element.",
-  "molecule":"Two or more atoms bonded together.",
-  "ionic bond":"Bond formed by electron transfer.",
-  "covalent bond":"Bond formed by electron sharing.",
-  "mole":"Amount of substance containing Avogadro's number.",
-  "acid":"Substance that donates hydrogen ions.",
-  "base":"Substance that accepts hydrogen ions.",
-  "cell":"Basic unit of life.",
-  "mitosis":"Cell division producing identical cells.",
-  "meiosis":"Cell division producing gametes.",
-  "photosynthesis":"Process plants use to make food.",
-  "enzyme":"Protein that speeds up reactions.",
-  "algorithm":"Step-by-step method to solve a problem.",
-  "variable":"Named storage location in a program.",
-  "loop":"Code that repeats.",
-  "array":"Collection of values under one name.",
-  "debugging":"Finding and fixing errors."
-};
-
-function lookup(){
-  const w=document.getElementById("wordInput").value.toLowerCase().trim();
-  document.getElementById("definition").innerText=dictionary[w]||"❌ Term not found.";
-}
-
-function askAI(){
-  const q=document.getElementById("aiInput").value.toLowerCase();
-  let response="🤖 Try asking about a known term with 'explain' or 'example'.";
-  for(let term in dictionary){
-    if(q.includes(term)){
-      response=`💡 ${term.toUpperCase()}\n${dictionary[term]}\n\n📘 Study Tip: Practice this concept using past papers daily.`;
-      if(q.includes("example")){
-        response+=`\n📌 Example: Apply ${term} step by step in a real problem.`;
-      }
-      break;
-    }
-  }
-  document.getElementById("ai-response").innerText=response;
-}
-
-/* Payment submission */
-function submitPayment(){
-  const name=document.getElementById("userName").value.trim();
-  const phone=document.getElementById("userPhone").value.trim();
-  if(!name||!phone){alert("Enter name and phone"); return;}
-  fetch('update_users.php',{
-    method:'POST',
-    headers:{'Content-Type':'application/json'},
-    body:JSON.stringify({action:'add',user:{name:name,phone:phone,time:new Date().toISOString()}})
-  }).then(res=>res.json()).then(data=>{
-    alert(data.message);
-  });
-}
-
-/* Admin dashboard */
-function unlockDashboard(){
-  const pass=document.getElementById("adminPass").value;
-  if(pass!=='Pmg76243406.,SILENCE'){alert("Wrong password"); return;}
-  document.getElementById("dashContent").style.display='block';
-  document.querySelector(".admin-login").style.display='none';
-  fetchDashboard();
-}
-
-function fetchDashboard(){
-  fetch('get_users.php')
-  .then(res=>res.json())
-  .then(data=>{
-    const pendingTable=document.getElementById("pendingTable");
-    pendingTable.innerHTML='<tr><th>Name</th><th>Phone</th><th>Time</th><th>Action</th></tr>';
-    data.pending.forEach(u=>{
-      const row=document.createElement('tr');
-      row.innerHTML=`<td>${u.name}</td><td>${u.phone}</td><td>${u.time}</td>
-      <td><button onclick="approveUser('${u.phone}')">Approve</button></td>`;
-      pendingTable.appendChild(row);
-    });
-    const approvedTable=document.getElementById("approvedTable");
-    approvedTable.innerHTML='<tr><th>Name</th><th>Phone</th><th>Access Expiry</th></tr>';
-    data.approved.forEach(u=>{
-      const row=document.createElement('tr');
-      row.innerHTML=`<td>${u.name}</td><td>${u.phone}</td><td>${u.accessExpiry}</td>`;
-      approvedTable.appendChild(row);
-    });
-  });
-}
-
-function approveUser(phone){
-  if(!confirm("Approve this user?")) return;
-  fetch('update_users.php',{
-    method:'POST',
-    headers:{'Content-Type':'application/json'},
-    body:JSON.stringify({action:'approve',phone:phone})
-  }).then(res=>res.json()).then(data=>{
-    alert(data.message);
-    fetchDashboard();
-  });
-}
+/* all other functions like loadCourse(), openPaper(), lookup(), askAI(), submitPayment(), unlockDashboard() ... */
 </script>
 
+<!-- =================== FIREBASE INTEGRATION =================== -->
+<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-messaging-compat.js"></script>
+<script src="firebase.js"></script>
+<!-- ============================================================ -->
+
 </body>
-    </html>
+  </html>
